# GTO_test_1

./: README.md  kidney_donation_donation_terms.jsonl  pyproject.toml
design/: README.md
docs/: implementation-plan.md  prd.md  roadmap.md
docs/architecture/: data-model.md  overview.md
scripts/: run_ingestion.py
src/caqdashub/: __init__.py  models.py
src/caqdashub/ingestion/: __init__.py  service.py  sources.py
tests/: test_ingestion.py
